Fri May 20 11:00:17 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* regex_internal.h (__attribute_warn_unused_result__): Always
	ifdef out. Bleah.

Thu May 19 17:13:18 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.83: Second beta test tar ball for 4.0.

Thu May 19 16:47:19 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y (dump_vars): Fix warning message. Thanks to Pat Rankin.
	* main.c (usage): No space allowed after -d and -p. Also thanks
	to Pat Rankin.

Thu May 19 16:34:04 2011  Pat Rankin  <rankin@pactechdata.com>

	* regex_internal.h (__attribute_warn_unused_result__): Define with
	empty expansion for !__GNUC__ configuration.

Wed May 18 22:13:18 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.82: Beta test tar ball for 4.0, we hope!

Wed May 18 21:47:54 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (PIPES_SIMULATED): Simplify the case where PIPES_SIMULATED
	is true but using temporary files - that code not needed anymore.
	* regcomp.c, regex.h, regex_internal.c, regex_internal.h,
	regexec.c: Sync with GLIBC. Why not.

Mon May 16 17:55:25 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.c: Regenerated using bison 2.5.

Sat May 14 22:25:50 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (nextfile): Use `in_array' in main loop to see if element
	of ARGV exists, instead of using `assoc_lookup'.  The latter creates
	the element!  A day one bug!
	* dfa.c (parse_bracket_exp): For z/OS init pattern manually.

Mon May  9 16:30:49 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* array.c (sort_up_value_type): Remove unused variable ret.
	(do_delete): Initialize local variables to silence warnings.
	Thanks to Michal Jaegermann.

Mon May  9 15:07:29 2011  Corinna Vinschen  <vinschen@redhat.com>

	* awk.h: Remove cygwin code for libsigsegv.

Sun May  8 20:38:03 2011  John Haque      <j.eh@mchsi.com>

	* eval.c (r_interpret): In case Op_sub_array, store only the
	subarray index as 'vname'.