@@ -924,7 +924,7 @@ static const struct varinit varinit[] = {
 {&FILENAME_node, "FILENAME",	"",	0,  NULL, NULL,	FALSE, 0 },
 {&FNR_node,	"FNR",		NULL,	0,  update_FNR, set_FNR,	TRUE, 0 },
 {&FS_node,	"FS",		" ",	0,  NULL, set_FS,	FALSE, 0 },
-{&FPAT_node,	"FPAT",		" ",	0,  NULL, set_FPAT,	FALSE, 0 },
+{&FPAT_node,	"FPAT",		"[^[:space:]]+", 0,  NULL, set_FPAT,	FALSE, 0 },
 {&IGNORECASE_node, "IGNORECASE", NULL,	0,  NULL, set_IGNORECASE,	FALSE, NON_STANDARD },
 {&LINT_node,	"LINT",		NULL,	0,  NULL, set_LINT,	FALSE, NON_STANDARD },
 {&NF_node,	"NF",		NULL,	-1, update_NF, set_NF,	FALSE, 0 },
