@@ -7,7 +7,7 @@ ERRNO: ""
 FIELDWIDTHS: ""
 FILENAME: "-"
 FNR: 3
-FPAT: " "
+FPAT: "[^[:space:]]+"
 FS: " "
 IGNORECASE: 0
 LINT: 0
