@@ -1,3 +1,12 @@
+Mon May 23 14:03:15 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* fpatnull.awk, fpatnull.in, fpatnull.ok: New files.
+	* Makefile.am (fpatnull): New test.
+
+Sun May 22 11:58:58 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* dumpvars.ok: Updated.
+
 Thu May 19 16:56:31 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* badargs.ok: Updated.
