@@ -1,3 +1,10 @@
+Sun May 22 11:56:40 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* main.c (varinit): Give FPAT a reasonable default value.
+	* field (get_field): Adjust test for at end of record to >=;
+	fpat_parse_field can go beyond when matching null regexps.
+	Thanks to Pat Rankin.
+
 Fri May 20 11:00:17 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* regex_internal.h (__attribute_warn_unused_result__): Always
